fix: add spacing between main input and list

--- a/src/pages/Jot/index.module.scss
+++ b/src/pages/Jot/index.module.scss
@@ -20,6 +20,7 @@
         display: flex;
         flex-direction: column;
         gap: 0.25rem;
+        margin-top: 1rem;
 
         &--Expanded {
             gap: 1rem;
